Fixed BS navbar that wasn't working when navbar collapses

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,14 +2,22 @@
   display: flex;
 }
 
+html,
 body {
-  background-image: url('./components/layout/bg-blue.jpg');
-  background-repeat: repeat-y;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-body > #root > div {
-  height: 100vh;
+body {
+  background-image: url('./components/layout/bg-blue.jpg');
+  z-index: 1 !important;
 }
+
+/* body > #root > div {
+  height: 100vh;
+} */
 
 .non-transparent {
   background: rgba(255, 255, 255, 0.9);
